<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/imageview_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:contentDescription="@string/description_movie_poster"
                android:src="@drawable/example_movie_poster" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingEnd="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:paddingStart="5dp">

                <TextView
                    android:id="@+id/textview_release_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heading_release_date"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:id="@+id/textview_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingRight="2dp"
                    android:paddingEnd="2dp"
                    android:text="@string/example_release_date"
                    android:textSize="@dimen/abc_text_size_large_material" />

                <TextView
                    android:id="@+id/textview_vote_average_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/heading_vote_average"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:id="@+id/textview_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingRight="2dp"
                    android:paddingEnd="2dp"
                    android:text="@string/example_vote_average"
                    android:textSize="@dimen/abc_text_size_large_material" />
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/textview_original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/black"
            android:text="@string/example_original_title"
            android:textSize="@dimen/abc_text_size_headline_material" />

        <TextView
            android:id="@+id/textview_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_overview" />

        <LinearLayout
            android:id="@+id/extras"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/trailers"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailers_recycler_view"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/no_trailer_view"
                android:textSize="20sp"
                android:text="@string/no_trailers_available"
                android:visibility="invisible"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:text="@string/reviews"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_recycler_view"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/no_review"
                android:textSize="20sp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/no_reviews_available"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>